<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_perfil" />

    <item
        android:id="@+id/navigation_peliculas"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_movies" />


    <item
        android:id="@+id/navigation_mapa"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mapa" />


    <item
        android:id="@+id/navigation_multimedia"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_galeria" />

</menu>