<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="userdata"
            type="com.sngular.rgarciavital.data.model.Author" />
        <variable
            name="itemreview"
            type="com.sngular.rgarciavital.data.model.Review" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lnl_user"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#F6F5F5"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".Profile">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="#2196F3"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:foregroundGravity="center_horizontal"
                        app:cardCornerRadius="100dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:loadimageFromUrlExternal="@{userdata.avatar_path}" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@{userdata.name}"
                        android:textColor="#fff"
                        android:textSize="23dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_name"
                                android:textColor="#000"
                                android:textSize="17dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userdata.name}"
                                android:textColor="#2196F3"
                                android:textSize="17dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_username"
                                android:textColor="#000"
                                android:textSize="17dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userdata.username}"
                                android:textColor="#2196F3"
                                android:textSize="17dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_rating"
                                android:textColor="#000"
                                android:textSize="17dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{Double.toString(userdata.rating)}"
                                android:textColor="#2196F3"
                                android:textSize="17dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_list_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                >

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:indeterminate="true"
                    android:translationZ="90dp"
                    android:visibility="gone"
                    app:indicatorColor="@color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/item_review" />
            </RelativeLayout>



        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>